Ensure optimization utilities build on Java 8